--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
     background-color: #00ff00;
     align-self: flex-start;
     animation: blink 1s infinite;
+    position: sticky;
 }
 @keyframes blink {
     0% {opacity: 1;}
@@ -44,7 +45,7 @@ a .action_button {
     color: #000;
     margin: 40px 0;
     width: 100px;
-    border-radius: 10px;
+    border-radius: 4px;
     align-items: center;
     text-align: center;
 }
@@ -73,4 +74,9 @@ a .action_button {
     text-align: center;
     border-style: solid;
     box-shadow: 0 0 12px #262626;
+}
+.main_header_two p {
+    color: #00ff00;
+    padding: 3rem;
+    width: 0 auto;
 }
